deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama-model-viewer
  namespace: ollama
spec:
  to:
    kind: Service
    name: ollama-model-viewer
  port:
    targetPort: proxy-https
  tls:
    termination: Reencrypt
    insecureEdgeTerminationPolicy: Redirect
